<resources>
    <string name="app_name">15011089</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="phone_text">Phone Number</string>
    <string name="address_text">Address</string>
    <string name="home_page">Home Page</string>
    <string name="personalID_text">Identity Number</string>
    <string name="bDate_text">Birth Date</string>


</resources>
