<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPerson">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:onClick="clickText"

                    android:hint="Name"/>

                <EditText
                    android:id="@+id/surName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/surname_text"
                    android:onClick="clickText"/>

                <EditText
                    android:id="@+id/personID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/personalID_text"
                    android:onClick="clickText"/>

                <TextView
                    android:id="@+id/bDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:onClick="clickText"
                    android:hint="@string/bDate_text"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:ems="10"
                    android:inputType="phone"
                    android:hint="@string/phone_text"
                    android:onClick="clickText"/>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Address"
                    android:onClick="clickText"

                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/personPicture"
                    android:layout_width="173dp"
                    android:layout_height="192dp"
                    android:layout_marginTop="50dp"
                    android:src="@mipmap/profil_icon"
                    android:onClick="loadPicture"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">


            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:onClick="saveInformation"
                android:text="SAVE"
                android:background="@drawable/button_design2"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:text="CLEAR"
                android:onClick="clearInformation"
                android:background="@drawable/button_design2"
                android:textColor="@color/white"/>

        </LinearLayout>



    </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>